# changeling

./: README.md  changeling.opam  dune-project  notes.org
.github/workflows/: main.yml
lib/: change.ml  dune  model.ml  omd_ext.ml
test/: dune
test/configuration.t/: CHANGES.md.template  CONFIGURED_CHANGELOG.md  changelog-config  invalid-sexp-config  run.t  valid-config-file
test/format.t/: invalid_changes.md  missing_title.md  missing_unreleased.md  run.t  unordered_changes.md
test/init.t/: run.t
test/merge.t/: changes_a.md  changes_b.md  release_summary_conflict.md  run.t  summary_conflict.md  title_conflict.md  version_conflict.md
test/release.t/: changes.md  run.t
test/version.t/: changes.md  run.t
